<resources>
    <string name="app_name">AudioGram</string>
    <string name="main_activity_log_in">Dalej</string>
    <string name="main_activity_write_in_chat">Pisz na chatcie</string>
    <string name="main_activity_make_notes">Rób notatki</string>
    <string name="main_activity_welcome">Witaj</string>
    <string name="main_menu_about">O programie</string>
    <string name="about_activity_app_name">AudioGram</string>
    <string name="about_activity_description">Aplikacja do </string>
    <string name="about_activity_version">Wersja 1.1</string>
    <string name="about_activity_authors">Autorzy:</string>
    <string name="author_rs">Tomasz Syrylo i Igor Domitrz</string>
    <string name="start">Start</string>
    <string name="calibration">Kalibracja</string>
    <string name="kalibracja_przycisk">Rozpocznij kalibrację</string>
    <string name="button_click">Naciśnij gdy usłyszysz dźwięk</string>
    <string name="noHear">Naciśnij, gdy nie słyszysz dźwięku</string>
    <string name="pomiarButton">Rozpocznij pomiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="endPomiarButton">Zakończ pomiar</string>
    <string name="stopKalibracjiButton">zakończ kalibrację</string>
    <string name="calibrationMessage">Czas do końca kalibracji:</string>
    <string name="leweUcho">Lewe ucho</string>
    <string name="praweUcho">Prawe ucho</string>
    <string name="wykres">Wykresy Amplitudowo-Częstotliwościowe dla obu uszu</string>
    <string name="freq">Częstotliwość</string>
    <string name="noise">dB</string>

</resources>