<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/calibrationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrationMessage"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/calibrationTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalibracja_przycisk"
        android:textSize="20sp" />
    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopKalibracjiButton"
        android:textSize="20sp" />

</LinearLayout>